# hcp-terraform-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  implementation-plan.md  main.py  project-plan.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/hcp_terraform_mcp/: __init__.py  __main__.py  client.py  config.py  models.py  resource_handlers.py  server.py  tool_definitions.py  tool_handlers.py
src/hcp_terraform_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tfc_mcp/: __init__.py  client.py  config.py  models.py  server.py
src/tfc_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_client.py  test_server.py
