[project]
name = "hcp-terraform-mcp"
version = "0.1.0"
description = "HCP Terraform MCP Server - Model Context Protocol server for HCP Terraform APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.9.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "starlette>=0.37.2",
    "uvicorn>=0.31.0",
    "anyio>=4.9.0",
]

[project.scripts]
hcp-terraform-mcp = "hcp_terraform_mcp.server:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
